Added API for File, Storage & Trash (removed the earlier file API for Storage)